Make some change of my coding.

--- a/p8105_hw1_xh2636.html
+++ b/p8105_hw1_xh2636.html
@@ -404,22 +404,22 @@ the humidity before Jan 07 is lower than the humidity after Jan 07.</p>
 <pre><code>## # A tibble: 10 × 4
 ##    vec_char vec_numeric vec_logical vec_factor
 ##    &lt;chr&gt;          &lt;dbl&gt; &lt;lgl&gt;       &lt;fct&gt;     
-##  1 My           -0.790  FALSE       excellent 
-##  2 name         -1.75   FALSE       fair      
-##  3 is           -0.0916 FALSE       bad       
-##  4 Gavin         1.62   TRUE        excellent 
-##  5 I             0.139  TRUE        fair      
-##  6 like          0.457  TRUE        bad       
-##  7 hiking       -0.466  FALSE       excellent 
-##  8 with          0.404  TRUE        fair      
-##  9 my            1.55   TRUE        bad       
-## 10 friends      -0.794  FALSE       excellent</code></pre>
+##  1 My           -0.680  FALSE       excellent 
+##  2 name          0.0432 TRUE        fair      
+##  3 is           -1.03   FALSE       bad       
+##  4 Gavin        -0.567  FALSE       excellent 
+##  5 I             0.656  TRUE        fair      
+##  6 like          0.134  TRUE        bad       
+##  7 hiking        0.160  TRUE        excellent 
+##  8 with          0.219  TRUE        fair      
+##  9 my           -0.774  FALSE       bad       
+## 10 friends       0.389  TRUE        excellent</code></pre>
 </div>
 <div id="random-sample-of-size-10s-mean" class="section level1">
 <h1>Random sample of size 10’s mean:</h1>
 <pre><code>## [1] NA</code></pre>
-<pre><code>## [1] 0.02733879</code></pre>
-<pre><code>## [1] 0.5</code></pre>
+<pre><code>## [1] -0.1450338</code></pre>
+<pre><code>## [1] 0.6</code></pre>
 <pre><code>## [1] NA</code></pre>
 <p>As we calculated the mean for these 4 variable, we found that the
 vec_numeric and vec_logic can have a mean, and other 2 variable does
