The lastest verzion of the code.

--- a/p8105_hw1_xh2636.html
+++ b/p8105_hw1_xh2636.html
@@ -404,21 +404,21 @@ the humidity before Jan 07 is lower than the humidity after Jan 07.</p>
 <pre><code>## # A tibble: 10 × 4
 ##    vec_char vec_numeric vec_logical vec_factor
 ##    &lt;chr&gt;          &lt;dbl&gt; &lt;lgl&gt;       &lt;fct&gt;     
-##  1 My           -0.680  FALSE       excellent 
-##  2 name          0.0432 TRUE        fair      
-##  3 is           -1.03   FALSE       bad       
-##  4 Gavin        -0.567  FALSE       excellent 
-##  5 I             0.656  TRUE        fair      
-##  6 like          0.134  TRUE        bad       
-##  7 hiking        0.160  TRUE        excellent 
-##  8 with          0.219  TRUE        fair      
-##  9 my           -0.774  FALSE       bad       
-## 10 friends       0.389  TRUE        excellent</code></pre>
+##  1 My            0.838  TRUE        excellent 
+##  2 name         -2.34   FALSE       fair      
+##  3 is           -0.388  FALSE       bad       
+##  4 Gavin         1.64   TRUE        excellent 
+##  5 I             0.758  TRUE        fair      
+##  6 like         -0.227  FALSE       bad       
+##  7 hiking        1.18   TRUE        excellent 
+##  8 with          0.0328 TRUE        fair      
+##  9 my            0.697  TRUE        bad       
+## 10 friends      -0.0401 FALSE       excellent</code></pre>
 </div>
 <div id="random-sample-of-size-10s-mean" class="section level1">
 <h1>Random sample of size 10’s mean:</h1>
 <pre><code>## [1] NA</code></pre>
-<pre><code>## [1] -0.1450338</code></pre>
+<pre><code>## [1] 0.2147449</code></pre>
 <pre><code>## [1] 0.6</code></pre>
 <pre><code>## [1] NA</code></pre>
 <p>As we calculated the mean for these 4 variable, we found that the
